k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valhallalandingpage
  namespace: valhallalandingpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valhallalandingpage
  template:
    metadata:
      labels:
        app: valhallalandingpage
    spec:
      containers:
        - name: app
          image: ghcr.io/mschmidlin1/valhallalandingpage:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
